<resources>
    <string name="app_name">Linear Layout</string>
    <string name="diva_lia_ramadhani">Diva Lia Ramadhani</string>
    <string name="nim_ssi202202988">NIM : SSI202202988</string>
    <string name="ruhul_nur_kholif">Ruhul Nur Kholif</string>
    <string name="nim_ssi202202855">NIM : SSI202202855</string>
    <string name="vivi_indriyani_mufti_afifah">Vivi Indriyani Mufti Afifah</string>
    <string name="nim_ssi202203181">NIM : SSI202203181</string>
    <string name="rian_kurniawan">Rian Kurniawan</string>
    <string name="nim_ssi202203165">NIM : SSI202203165</string>
    <string name="daning_nene_rarasasi">Daning Nene Rarasasi</string>
    <string name="nim_ssi202202839">NIM : SSI202202839</string>
    <string name="Vivi_Indriyani_Mufti_Afifah">Vivi Indriyani Mufti Afifah</string>
</resources>